# fileclip

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
dev/docs/: design-specification.md  implementation-plan.md  manual-verification.md  requirements.md
docs/: troubleshooting.md
src/fileclip/: __init__.py  __main__.py  cli.py  server.py
src/fileclip/static/: app.css  app.js  index.html
tests/: test_cli.py  test_package_data.py  test_server.py  test_static_assets.py
