[project]
name = "fileclip"
version = "0.1.0"
description = "Local clipboard-envelope file transfer helper"
readme = "README.md"
authors = [
    { name = "Osama Masoud", email = "osama.masoud@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["clipboard", "file-transfer", "fastapi", "local-web-app"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
fileclip = "fileclip.cli:main"

[project.urls]
Homepage = "https://github.com/omasoud/fileclip"
Repository = "https://github.com/omasoud/fileclip"
Issues = "https://github.com/omasoud/fileclip/issues"

[build-system]
requires = ["uv_build>=0.9.18,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "2 days" # Exclude packages released in the last 2 days as a protection against undiscovered supply chain vulnerabilities.

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "packaging>=26.2",
    "pytest>=9.1.1",
]
